--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dynamic = ['version']
 
 [project.optional-dependencies]
 optional = [
-  "matplotlib", "joblib>=1.3", "meshio", "quadpy-gpl",
+  "matplotlib", "joblib>=1.3", "meshio",
+  # "quadpy-gpl",
   # "bemio @ https://github.com/mancellin/bemio/archive/fa3a6d3d4b0862491c3723919ec8ee45cc7d055a.zip"
 ]
 test = ["pytest"]
