--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,14 @@ name = "capytaine"
 description = "Python BEM solver for linear potential flow, based on Nemoh"
 authors = [{name = "Matthieu Ancellin", email = "matthieu.ancellin@eurobios.com"}]
 requires-python = ">=3.8"
-dependencies = ["numpy>=1.20", "scipy", "pandas>=1.3", "xarray", "rich"]
+dependencies = [
+   "numpy>=1.20; python_version>='3.9'",
+   "numpy>=1.24; python_version=='3.8'",  # https://github.com/capytaine/capytaine/issues/562
+   "scipy",
+   "pandas>=1.3",
+   "xarray",
+   "rich"
+]
 urls = {repository = "https://github.com/capytaine/capytaine"}
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -32,8 +39,8 @@ build-backend = 'mesonpy'
 requires = [
     "meson-python",
     "charset-normalizer",
-    "oldest-supported-numpy; python_version < '3.9'",
-    "numpy>=2.0.0rc1; python_version >= '3.9'",
+    "numpy>=2.0.0; python_version>='3.9'",
+    "numpy==1.24.4; python_version=='3.8'",
 ]
 
 [tool.cibuildwheel]
