Use OpenMP in MacOS wheels
This is supposed to be supported by Meson now.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermai
 [build-system]
 build-backend = 'mesonpy'
 requires = [
+    "meson>=1.5",
     "meson-python",
     "charset-normalizer",
     "numpy>=2.0.0; python_version>='3.9'",
