--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -28,13 +28,19 @@ jobs:
           compiler: 'gcc'
           version: '13'
 
+      - if: matrix.os == 'macos-14'
+        run: export MACOSX_DEPLOYMENT_TARGET=14.0
+
+      - if: matrix.os == 'macos-12'
+        run: export MACOSX_DEPLOYMENT_TARGET=12.0
+
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.21.1
         env:
           CIBW_SKIP: "pp* *i686* *musllinux* *win32*"
         # Package the DLL dependencies in the wheel for windows (done by default for the other platforms).
         # delvewheel cannot mangle the libraries, stripping does not work.
-          CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=14.0
+          # CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=14.0
           CIBW_BEFORE_BUILD_WINDOWS: pip install delvewheel
           CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel show {wheel} && delvewheel repair -w {dest_dir} {wheel} --no-mangle-all"
         # with:
