--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -15,8 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # os: [ubuntu-20.04, macos-12, macos-14, windows-2019]
-        os: [ubuntu-20.04, macos-14, windows-2019]
+        os: [ubuntu-20.04, macos-12, macos-14, windows-2019]
             # MacOS<=13 are Intel, while MacOS 14 is Apple Silicon
 
     steps:
@@ -37,10 +36,10 @@ jobs:
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.21.1
         env:
-          CIBW_SKIP: "pp* *i686* *musllinux* *win32*"
+          CIBW_SKIP: "pp* *i686* *musllinux* *win32* cp313*"
+          # As of Sept 2024, Python 3.13 is troublesome because of lack of Pandas for Python 3.13.
         # Package the DLL dependencies in the wheel for windows (done by default for the other platforms).
         # delvewheel cannot mangle the libraries, stripping does not work.
-          # CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=14.0
           CIBW_BEFORE_BUILD_WINDOWS: pip install delvewheel
           CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel show {wheel} && delvewheel repair -w {dest_dir} {wheel} --no-mangle-all"
         # with:
