--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -27,25 +27,36 @@ jobs:
           compiler: 'gcc'
           version: '13'
 
-      - if: matrix.os == 'macos-14'
-        run: export MACOSX_DEPLOYMENT_TARGET=14.0
-
-      - if: matrix.os == 'macos-12'
-        run: export MACOSX_DEPLOYMENT_TARGET=12.0
-
       - name: Build wheels
+        if: matrix.os == 'ubuntu-20.04'
         uses: pypa/cibuildwheel@v2.21.1
         env:
-          CIBW_SKIP: "pp* *i686* *musllinux* *win32* cp313*"
+          CIBW_SKIP: "pp* cp313* *i686* *musllinux*"
           # As of Sept 2024, Python 3.13 is troublesome because of lack of Pandas for Python 3.13.
-        # Package the DLL dependencies in the wheel for windows (done by default for the other platforms).
-        # delvewheel cannot mangle the libraries, stripping does not work.
+
+      - name: Build wheels
+        if: matrix.os == 'macos-12'
+        uses: pypa/cibuildwheel@v2.21.1
+        env:
+          CIBW_SKIP: "pp* cp313*"
+          CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=12.0
+
+      - name: Build wheels
+        if: matrix.os == 'macos-14'
+        uses: pypa/cibuildwheel@v2.21.1
+        env:
+          CIBW_SKIP: "pp* cp313*"
+          CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=14.0
+
+      - name: Build wheels
+        if: matrix.os == 'windows-2019'
+        uses: pypa/cibuildwheel@v2.21.1
+        env:
+          CIBW_SKIP: "pp* cp313* *win32*"
           CIBW_BEFORE_BUILD_WINDOWS: pip install delvewheel
           CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel show {wheel} && delvewheel repair -w {dest_dir} {wheel} --no-mangle-all"
-        # with:
-        #   package-dir: .
-        #   output-dir: wheelhouse
-        #   config-file: "{package}/pyproject.toml"
+          # Package the DLL dependencies in the wheel for windows (done by default for the other platforms).
+          # delvewheel cannot mangle the libraries, stripping does not work.
 
       - uses: actions/upload-artifact@v4
         with:
