--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -31,7 +31,7 @@ jobs:
         if: matrix.os == 'ubuntu-20.04'
         uses: pypa/cibuildwheel@v2.21.1
         env:
-          CIBW_SKIP: "pp* cp313* *i686* *musllinux*"
+          CIBW_SKIP: "pp* *i686* *musllinux*"
           # As of Sept 2024, Python 3.13 is troublesome because of lack of Pandas for Python 3.13.
 
       - name: Build wheels
@@ -45,14 +45,14 @@ jobs:
         if: matrix.os == 'macos-14'
         uses: pypa/cibuildwheel@v2.21.1
         env:
-          CIBW_SKIP: "pp* cp313*"
+          CIBW_SKIP: "pp*"
           CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=14.0
 
       - name: Build wheels
         if: matrix.os == 'windows-2019'
         uses: pypa/cibuildwheel@v2.21.1
         env:
-          CIBW_SKIP: "pp* cp313* *win32*"
+          CIBW_SKIP: "pp* *win32*"
           CIBW_BEFORE_BUILD_WINDOWS: pip install delvewheel
           CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel show {wheel} && delvewheel repair -w {dest_dir} {wheel} --no-mangle-all"
           # Package the DLL dependencies in the wheel for windows (done by default for the other platforms).
