--- a/.github/workflows/test_new_commits.yaml
+++ b/.github/workflows/test_new_commits.yaml
@@ -62,7 +62,7 @@ jobs:
       uses: fortran-lang/setup-fortran@v1
       with:
         compiler: 'gcc'
-        version: '13'
+        # version: '13'
 
     - name: Compile and run example
       working-directory: capytaine/green_functions/libDelhommeau/
