--- a/.github/workflows/test_new_commits.yaml
+++ b/.github/workflows/test_new_commits.yaml
@@ -58,11 +58,11 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Set up Fortran
-      uses: fortran-lang/setup-fortran@v1
-      with:
-        compiler: 'gcc'
-        # version: '13'
+    # - name: Set up Fortran
+    #   uses: fortran-lang/setup-fortran@v1
+    #   with:
+    #     compiler: 'gcc'
+    #     # version: '13'
 
     - name: Compile and run example
       working-directory: capytaine/green_functions/libDelhommeau/
