--- a/.github/workflows/test_new_commits.yaml
+++ b/.github/workflows/test_new_commits.yaml
@@ -58,11 +58,15 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    # # 2024-10-22: disabling this step because it takes a few minutes to
+    # download a specific version of GCC, but it is not really required as GCC
+    # is already installed on the Ubuntu runner.
+    #
     # - name: Set up Fortran
     #   uses: fortran-lang/setup-fortran@v1
     #   with:
     #     compiler: 'gcc'
-    #     # version: '13'
+    #     version: '13'
 
     - name: Compile and run example
       working-directory: capytaine/green_functions/libDelhommeau/
