--- a/.github/workflows/build_wheels.yaml
+++ b/.github/workflows/build_wheels.yaml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-12, macos-14, windows-2019]
+        os: [ubuntu-20.04, macos-13, macos-14, windows-2019]
             # MacOS<=13 are Intel, while MacOS 14 is Apple Silicon
 
     steps:
@@ -35,24 +35,24 @@ jobs:
           # As of Sept 2024, Python 3.13 is troublesome because of lack of Pandas for Python 3.13.
 
       - name: Build wheels
-        if: matrix.os == 'macos-12'
+        if: matrix.os == 'macos-13'
         uses: pypa/cibuildwheel@v2.21.1
         env:
-          CIBW_SKIP: "pp* cp313*"
-          CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=12.0
+          CIBW_SKIP: "pp*"
+          CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=13.0
 
       - name: Build wheels
         if: matrix.os == 'macos-14'
         uses: pypa/cibuildwheel@v2.21.1
         env:
-          CIBW_SKIP: "pp* cp313*"
+          CIBW_SKIP: "pp*"
           CIBW_ENVIRONMENT: MACOSX_DEPLOYMENT_TARGET=14.0
 
       - name: Build wheels
         if: matrix.os == 'windows-2019'
         uses: pypa/cibuildwheel@v2.21.1
         env:
-          CIBW_SKIP: "pp* cp313* *win32*"
+          CIBW_SKIP: "pp* *win32*"
           CIBW_BEFORE_BUILD_WINDOWS: pip install delvewheel
           CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel show {wheel} && delvewheel repair -w {dest_dir} {wheel} --no-mangle-all"
           # Package the DLL dependencies in the wheel for windows (done by default for the other platforms).
