--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
    "xarray",
    "rich"
 ]
-urls = {repository = "https://github.com/capytaine/capytaine"}
+urls = {homepage = "https://capytaine.org", repository = "https://github.com/capytaine/capytaine"}
 readme = "README.md"
 license = {file = "LICENSE"}
 classifiers = [
@@ -30,8 +30,11 @@ optional = [
   "matplotlib", "joblib>=1.3", "meshio", "netcdf4", "vtk"
   # "bemio @ https://github.com/mancellin/bemio/archive/fa3a6d3d4b0862491c3723919ec8ee45cc7d055a.zip"
 ]
+
+[dependency-groups]
 test = ["pytest"]
 docs = ["sphinx", "sphinx-toolbox", "sphinxcontrib-proof", "sphinxcontrib-mermaid"]
+# dev = [...]   see editable_install_requirements.txt
 
 [build-system]
 build-backend = 'mesonpy'
